# phosh

./: .gitignore  meson.build
app-search/: app-search.c  meson.build
data/: meson.build  sm.puri.Phosh.AppSearch.desktop.in  sm.puri.Phosh.AppSearch.service.in  sm.puri.Phosh.Search.service.in
docs/: phosh-docs.xml
po/: POTFILES.in
searchd/: meson.build  search-provider.c  search-provider.h  searchd.c  searchd.h
src/: app-grid-button.c  app-grid-button.h  app-grid-standalone.c  app-grid.c  app-grid.h  app-list-model.c  app.c  batteryinfo.c  favorites.c  home.c  meson.build  overview.c  overview.h  phosh.gresources.xml  shell.c  style.css  wifiinfo.c  wwaninfo.c
src/dbus/: meson.build  sm.puri.Phosh.Search.xml
src/gtk-list-models/: gtkfilterlistmodel.c
src/search/: meson.build  search-client.c  search-client.h  search-provider.c  search-provider.h  search-result-app-frame.c  search-result-app-frame.h  search-result-content.c  search-result-content.h  search-result-frame.c  search-result-frame.h  search-result-list.c  search-result-list.h  search-result-meta.c  search-result-meta.h  search-result-source.c  search-result-source.h  search-result.c  search-result.h  search-source.c  search-source.h  search.c  search.h
src/search/searchd/: meson.build
src/ui/: app-grid-button.ui  app-grid.ui  app.ui  favorites.ui  notification-frame.ui  search-result-app-frame.ui  search-result-content.ui  search-result-frame.ui
tests/: meson.build  test-app-search.c  test-app.c  test-search-result-app-frame.c  test-search-result-content.c  test-search-result-frame.c  test-search-result-list.c  test-search-result-meta.c  test-search-result-source.c  test-search-result.c  test-search-source.c
tests/stubs/: bad-instance.h  evil-icon.c  evil-icon.h
tools/: app-grid-standalone.c  meson.build  run_tool.in  search-view.c  search.c
