stubs = [
  '../tests/stubs/phosh.c',
  '../tests/stubs/toplevel.c',
  '../tests/stubs/toplevel-manager.c',
]

executable('app-scroll', ['app-scroll.c'] + stubs,
           dependencies: phosh_dep)

executable('app-grid-standalone', ['app-grid-standalone.c'] + stubs,
           dependencies: phosh_dep)
