phosh_search_sources = [
  'search/search-provider.c',
  'search/search-provider.h',
  'search/search-result.c',
  'search/search-result.h',
  'search/search-result-app-frame.c',
  'search/search-result-app-frame.h',
  'search/search-result-content.c',
  'search/search-result-content.h',
  'search/search-result-frame.c',
  'search/search-result-frame.h',
  'search/search-result-list.c',
  'search/search-result-list.h',
  'search/search-result-meta.c',
  'search/search-result-meta.h',
  'search/search-result-source.c',
  'search/search-result-source.h',
  'search/search-source.c',
  'search/search-source.h',
]
